Adicionei o botão laranja

--- a/index.html
+++ b/index.html
@@ -63,9 +63,21 @@
     
     <header>
 
-        <h2 id="baixo">Você está no Globoplay gratuito</h2>
+        <div id="texto">
 
-        <p>Assine agora e aproveite o Brasileirão 2024, novelas, séries, filmes e muito mais!</p>
+            <div id="texto_2">
+                <h2 id="baixo">Você está no Globoplay gratuito</h2>
+
+                <p>Assine agora e aproveite o Brasileirão 2024, novelas, séries, filmes e muito mais!</p>
+            </div>
+
+            <p>Assine já</p>
+            
+        </div>
+
+        <!-- <div id="texto_2">
+            <p>Assine já</p>
+        </div> -->
 
     </header>
 
